--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -4,6 +4,15 @@
   flex-wrap: wrap;
 }
 
+/* .iconNav {
+} */
+
+/* .navBtn {
+}
+
+.navBtn:hover {
+} */
+
 @media screen and (max-width: 768px) {
   main,
   nav {
