--- a/src/Pages/AboutMe/AboutMe.css
+++ b/src/Pages/AboutMe/AboutMe.css
@@ -1,6 +1,12 @@
 .containerAboutMe {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
+}
+
+.welcomeBlock {
+  width: 80%;
+  margin-left: 3%;
 }
 
 .reactIcons {
@@ -26,6 +32,14 @@
 .profile {
   border-radius: 100%;
   width: 10%;
+  margin-left: 4%;
+}
+
+.navBar-Container {
+  display: flex;
+  justify-content: space-between;
+  height: 60px;
+  align-items: center;
 }
 
 @media screen and (max-width: 768px) {
