--- a/src/Pages/AboutMe/AboutMe.css
+++ b/src/Pages/AboutMe/AboutMe.css
@@ -7,6 +7,7 @@
   display: flex;
   width: auto;
   flex-wrap: wrap;
+  display: inline-flex;
 }
 
 .appIcons {
@@ -34,6 +35,10 @@
   justify-content: space-between;
   height: 60px;
   align-items: center;
+}
+
+.containerAboutMe {
+  background-color: cornflowerblue;
 }
 
 @media screen and (max-width: 768px) {
