--- a/src/Pages/Resume/Resume.css
+++ b/src/Pages/Resume/Resume.css
@@ -4,6 +4,14 @@
   flex-wrap: wrap;
 }
 
+.a {
+  display: block;
+}
+
+.prof {
+  text-align: left;
+}
+
 @media screen and (max-width: 768px) {
   main,
   nav {
