--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -13,11 +13,15 @@
   margin: 5%;
 }
 
-/* .navBtn {
+.navBtn {
+  margin: 5px;
+  text-decoration: none;
+  color: black;
 }
-
 .navBtn:hover {
-} */
+  color: blueviolet;
+  text-shadow: 0 0 10px red, 0 0 15px silver, 0 0 30px orange;
+}
 
 @media screen and (max-width: 768px) {
   main,
